# esp32-c6-lcd-rust-nostd

./: .gitmodules  Cargo.toml  README.md  diagram.json  wokwi.toml
.cargo/: config.toml
src/: main.rs
src/display/: mod.rs
src/led/: mod.rs
src/slint_backend/: mod.rs
ui/: main.slint
